<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Kosnice.DodajKosnicu.DodajKosnicuFragment2"
   >

    <TextView
        android:id="@+id/tBrojSanduka"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="49dp"
        android:text="@string/brSanduka"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nBrojSanduka"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnSanduka"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tBrojSanduka" />

    <TextView
        android:id="@+id/tOkvira"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="49dp"
        android:text="@string/bOkvira"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nBrojSanduka" />

    <EditText
        android:id="@+id/Okvira"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnOkvira"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tOkvira" />

    <TextView
        android:id="@+id/tOkviraGradnjaka"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="49dp"
        android:text="@string/bOkviraGradnjaka"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Okvira" />

    <EditText
        android:id="@+id/okviraGrdanjaka"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnOkviraGradnjaka"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tOkviraGradnjaka" />

    <TextView
        android:id="@+id/tOkviraLegla"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="49dp"
        android:text="@string/bOkviraLegla"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okviraGrdanjaka" />

    <EditText
        android:id="@+id/okviraLegla"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnOkviraLegla"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tOkviraLegla" />

    <TextView
        android:id="@+id/tOkviraPolena"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/bPolena"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okviraLegla" />

    <EditText
        android:id="@+id/okvirPolena"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnPolena"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tOkviraPolena" />

    <TextView
        android:id="@+id/tmed"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="49dp"
        android:text="@string/bMeda"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okvirPolena" />

    <EditText
        android:id="@+id/med"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnMeda"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tmed" />


</androidx.constraintlayout.widget.ConstraintLayout>