<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Kosnice.DodajKosnicu.DodajKosnicuFragment3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/tmRsetka"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="49dp"
        android:text="@string/maticna"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/mReseta"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/pMatica"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tmRsetka" />

    <TextView
        android:id="@+id/tsMatice"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
        android:text="@string/sMatice"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kolLegla" />

    <EditText
        android:id="@+id/sMatice"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/snMatica"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsMatice" />

    <TextView
        android:id="@+id/tKolLegla"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
        android:text="@string/nLegla"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="#7E3535"
        app:fontFamily="@font/actor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mReseta" />

    <EditText
        android:id="@+id/kolLegla"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/image_border"
        android:color="@color/white"
        android:hint="@string/brnLegla"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tKolLegla" />

    <Button
        android:id="@+id/dodajkosnicu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="7"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="272dp"
        android:text="Spremi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sMatice" />


</androidx.constraintlayout.widget.ConstraintLayout>